<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColorBackGroundBlue">

    <ImageView
        android:id="@+id/imageViewCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="72dp"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/lin_cardCadastro"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/txtTituloCadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSubTituloCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/txt_novo_cadastro"
            android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloCadastro" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lin_cardCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_one_loginCadastro"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:layout_marginBottom="8dp"
            android:elevation="10dp"
            app:cardBackgroundColor="#fcfcfc"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            card_view:cardElevation="10dp"
            tools:layout_editor_absoluteX="15dp"
            tools:ignore="MissingConstraints">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputEmailCadastro"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/edtEmailCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:hint="@string/txtHint_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputSenhaCadastro"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputEmailCadastro">

                    <AutoCompleteTextView
                        android:id="@+id/edtSenhaCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:hint="@string/txtHint_password"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputRepetirSenhaCadastro"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:visibility="visible"
                    android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputSenhaCadastro">

                    <AutoCompleteTextView
                        android:id="@+id/edtRepetirSenhaCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:hint="@string/txtHint_repetirpassword"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutCadastro2"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="15dp"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

         <Button
            android:id="@+id/btnCadastrarCadastro"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/poligon"
            android:text="@string/txtCadastrar"
            android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/login_progressCadastro"
        style="?android:attr/progressBarStyle"
        android:layout_width="78dp"
        android:layout_height="77dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />
</android.support.constraint.ConstraintLayout>